NEW: Add NL and DE translation

--- a/drivers/DiskStation/pair/login_synology.html
+++ b/drivers/DiskStation/pair/login_synology.html
@@ -32,16 +32,16 @@
 <form class="hy-tmpl-login_synology-form" action="/" method="post">
     <div class="hy-tmpl-login_synology-logo" style="background-image: url('synology.svg');"></div>
     <div class="hy-tmpl-login_synology-row row">
-        <label class="hy-label hy-tmpl-login_synology-label" for="username">Username</label>
+        <label class="hy-label hy-tmpl-login_synology-label" for="username" data-i18n="pair.username"></label>
         <input class="hy-input-text" name="username" type="text" value="" placeholder="Username">
     </div>
     <div class="hy-tmpl-login_synology-row row">
-        <label class="hy-label hy-tmpl-login_synology-label" for="password">Password</label>
+        <label class="hy-label hy-tmpl-login_synology-label" for="password" data-i18n="pair.password"></label>
         <input class="hy-input-text" name="password" type="text" value="" placeholder="Password">
     </div>
 
     <div class="hy-tmpl-login_synology-row row">
-        <label class="hy-label hy-tmpl-login_synology-label" for="ipAddress">IP Address (local IP - Port 5000)</label>
+        <label class="hy-label hy-tmpl-login_synology-label" for="ipAddress" data-i18n="pair.ip"></label>
         <input class="hy-input-text" name="ipAddress" type="text" value="" placeholder="IP Address">
     </div>
     <div class="hy-tmpl-login_synology-row row">
