--- a/drivers/DiskStation/pair/login_synology.html
+++ b/drivers/DiskStation/pair/login_synology.html
@@ -54,7 +54,7 @@
         <input class="hy-input-text" name="ipAddress" type="text" value="" placeholder="192.168.178.10">
     </div>
     
-    <div class="hy-tmpl-login_synology-row row hidden">
+    <div class="hy-tmpl-login_synology-row row">
         <input class="hy-input-checkbox" name="secure" type="checkbox">
         <label class="hy-label hy-tmpl-login_synology-label" for="secure" data-i18n="pair.secure"></label>
     </div>
